--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
     ],
     "require": {
         "php": ">=5.3",
-        "pimple/pimple": "dev-master"
+        "pimple/pimple": "3.*"
     },
     "require-dev": {
         "phpunit/phpunit": "3.7.*@dev"
