--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
     "type": "library",
     "description": "AceDAO, a simple yet powerful query system",
     "keywords": ["query","dao"],
-    "homepage": "http://acedao.voilab.org",
+    "homepage": "http://voilab.github.io/acedao",
     "license": "BSD-3-Clause",
     "authors": [
         {
@@ -13,14 +13,14 @@
     ],
     "require": {
         "php": ">=5.3",
-        "pimple/pimple": "3.*"
+        "mnapoli/php-di": "~4.0"
     },
     "require-dev": {
         "phpunit/phpunit": "3.7.*@dev"
     },
     "autoload": {
-        "psr-0" : {
-            "Acedao" : "lib/"
+        "psr-4": {
+            "Voilab\\Acedao\\": "lib/"
         }
     },
     "extra": {
