- removed useless code - updated the lib namespace (prefixed by Voilab) and refactor of the code

--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
     },
     "autoload": {
         "psr-4": {
-            "Voilab\\Acedao\\": "lib/"
+            "Voilab\\Acedao\\": "lib/Acedao"
         }
     },
     "extra": {
